k8s/Manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  selector:
    app: wisecow
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4499
      nodePort: 31999   # Add a NodePort manually
  type: NodePort        # Change LoadBalancer to NodePort
